--- a/main.html
+++ b/main.html
@@ -1,4 +1,40 @@
-<html>
+
+<style>
+.center {
+  margin: auto;
+  text-align: center;
+  width: 60%;
+  padding: 10px;
+</style>
+<div class = "center">
+
 <h1>
-Hello!
+  Music
 </h1>
+
+
+
+<p>
+  <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
+</p>
+<style>
+  .button {
+    background-color: #8b4ee6;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+</style>
+<button class="button" onclick="windowOpen()">
+  High Tide by Moona Hoshinova
+</button>
+
+
+
+</div>
