--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<link rel="website-project" href="https://github.com/Tokkisan/website-project/blob/main/Css.css">
+<link rel="stylesheet" href="https://github.com/Tokkisan/website-project/blob/main/Css.css">
 <script src="Javascript.js"></script>
 <style>
 .center {
