--- a/main.html
+++ b/main.html
@@ -1,5 +1,11 @@
+
+<html>
+<head>
 <link rel="stylesheet" href="https://github.com/Tokkisan/website-project/blob/main/Css.css">
 <script src="Javascript.js"></script>
+  
+  </head>
+  
 <style>
 .center {
   margin: auto;
@@ -36,6 +42,5 @@
   High Tide by Moona Hoshinova
 </button>
 
-
-
 </div>
+</html>
