--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type = "text.css" href="https://github.com/Tokkisan/Css.css">
+<link rel="stylesheet" type = "text/css" href="https://github.com/Tokkisan/Css.css">
 <script src="Javascript.js"></script>
   
   </head>
