--- a/main.html
+++ b/main.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
+<link rel="stylesheet" type = "text/css" href="https://github.com/Tokkisan/Css.css">
+<script src="Javascript.js"></script>
 
 <html>
 <head>
-<link rel="stylesheet" type = "text/css" href="https://github.com/Tokkisan/Css.css">
-<script src="Javascript.js"></script>
   
   </head>
   
