--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="https://github.com/Tokkisan/Css.css">
+<link rel="stylesheet" type="text/css" href="Css.css">
 <script src="Javascript.js"></script>
 
 <html>
