--- a/main.html
+++ b/main.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="Css.css">
+
 <script src="Javascript.js"></script>
 
 <html>
+  
 
-  <head>
-
-  </head>
-
+  
   <style>
     .center {
       margin: auto;
@@ -17,10 +15,12 @@
 
   </style>
   <div class="center">
-
+<link rel="stylesheet" type="text/css" href="Css.css">  
+<body>
     <h1>
       Music
     </h1>
+    </body>
 
     <p>
       <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
