--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
   </style>
   <div class="center">
 <link rel="stylesheet" type="text/css" href="Css.css"> 
-<script src="Javascript.js"></script>
+<script src="https://github.com/Tokkisan/website-project/blob/main/javascript.js"></script>
 <body>
     <h1>
       Music
