--- a/main.html
+++ b/main.html
@@ -20,11 +20,13 @@
     <h1>
       Music
     </h1>
-    </body>
+   
 
     <p>
       <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
     </p>
+    <script src="https://github.com/Tokkisan/website-project/blob/main/javascript.js"></script>
+    <body>
     <style>
       .button {
         background-color: #8b4ee6;
@@ -37,9 +39,9 @@
         display: inline-block;
         font-size: 16px;
       }
-
+ </body>
     </style>
-    <script src="https://github.com/Tokkisan/website-project/blob/main/javascript.js"></script>
+    
     <button class="button" onclick="windowOpen()">
       High Tide by Moona Hoshinova
     </button>
