--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <p>
       <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
     </p>
-    <script src="https://github.com/Tokkisan/website-project/blob/main/javascript.js"></script>
+    <script src="/javascript.js"></script>
     <body>
     <style>
       .button {
