--- a/main.html
+++ b/main.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-
-
-
 <html>
-  
-
-  
   <style>
     .center {
       margin: auto;
@@ -25,8 +19,7 @@
     <p>
       <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
     </p>
-    <script src="/javascript.js"></script>
-    <body>
+    <script src="javascript.js"></script>
     <style>
       .button {
         background-color: #8b4ee6;
