--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@
         text-decoration: none;
         display: inline-block;
         font-size: 16px;
+        cursor:pointer;
       }
 
     </style>
