--- a/main.html
+++ b/main.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <style>
-    .center {
-      margin: auto;
-      text-align: center;
-      width: 60%;
-      padding: 10px;
+<head>  
+<title>Crafting tips for FFXIV</title>
+</head>
 
-  </style>
-  <div class="center">
-<link rel="stylesheet" type="text/css" href="Css.css"> 
 <body>
-    <h1>
-      Music
-    </h1>
-   
+<style>
+  .center {
+    margin: auto;
+    text-align: center;
+    width: 80%;
+    padding: 20px;
+  }
+  .center1 {
+    margin: auto;
+    text-align: center;
+    width: 80%;
+    padding: 0px;
+  }
+  .intro {
+    margin: auto;
+    text-align: center;
+    width: 80%;
+    padding: 0px
+  }
+</style>
 
-    <p>
-      <a href='https://postimages.org/' target='_blank'><img src="https://i.postimg.cc/q77KDQx4/ab67616d0000b273094edaffb2a7a5534b8f17d9.jpg" width="320" height="300" border='0' alt='ab67616d0000b273094edaffb2a7a5534b8f17d9' /></a>
-    </p>
-    <script src="javascript.js"></script>
-    <style>
-      .button {
-        background-color: #8b4ee6;
-        /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        cursor: pointer;
-      }
-
-    </style>
-     </body>
-    <button class="button" onclick="windowOpen()">
-      High Tide by Moona Hoshinova
-    </button>
-
+<!--Title with icon-->
+<div class = center>
+  <div style = "display:inline-block;vertical-align:top;">
+    <img src ='https://i.postimg.cc/pLDrV0k8/great-strides.png' border='0' alt='great-strides'/>
+    <h1 style = "display:inline-block;"> Crafting Tips for FFXIV </h1>
   </div>
+</div>
+
+  <div class = center>
+  <div class = "row">
+    <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/VkHG6R6f/Blacksmith.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/3w4LDv4g/Carpenter.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/yNMLh8c2/Culinarian.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
+  </div>
+  </div>
+
+  <h2 class = intro> There are a few websites that help making crafting/gathering less time consuming and more manageable </h2>
+  </body>
 
 </html>
