--- a/main.html
+++ b/main.html
@@ -26,15 +26,16 @@
   }
 </style>
 
-<!--Title with icon-->
+<!-- Title with icon-->
 <div class = center>
   <div style = "display:inline-block;vertical-align:top;">
     <img src ='https://i.postimg.cc/pLDrV0k8/great-strides.png' border='0' alt='great-strides'/>
     <h1 style = "display:inline-block;"> Crafting Tips for FFXIV </h1>
   </div>
 </div>
-
-  <div class = center>
+  
+<!-- Job icons -->
+<div class = center>
   <div class = "row">
     <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
@@ -45,9 +46,11 @@
     <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
   </div>
-  </div>
+</div>
 
-  <h2 class = intro> There are a few websites that help making crafting/gathering less time consuming and more manageable </h2>
-  </body>
+<h2 class = intro> Crafting in Final Fantasy XVI may seem like a daunting task that you'll feel is impossible to understand; with its: 
+rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
+However there are a few sites that can alleivate most of the stress and confusion.  </h2>
+</body>
 
 </html>
