--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
   .intro {
     margin: auto;
     text-align: center;
-    width: 80%;
+    width: 60%;
     padding: 0px
   }
 </style>
@@ -44,10 +44,10 @@
     <img class = "jobicons" src = "https://i.postimg.cc/yNMLh8c2/Culinarian.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/><br>
   </div>
 </div>
-
+  <center> Intro: </center>
 <h2 class = intro> Crafting in Final Fantasy XVI may seem like a daunting task that you'll feel is impossible to understand; with its: 
 rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
 However there are a few sites that can alleivate most of the stress and confusion.  </h2>
