--- a/main.html
+++ b/main.html
@@ -24,6 +24,12 @@
     width: 60%;
     padding: 0px
   }
+  .intext {
+    margin:auto;
+    text-alig: left;
+    width:60%;
+    font-size 50px;
+  }
 </style>
 
 <!-- Title with icon-->
@@ -47,7 +53,7 @@
     <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/><br>
   </div>
 </div>
-  <center> Intro: </center>
+<div class = intext> Intro: </div>
 <h2 class = intro> Crafting in Final Fantasy XVI may seem like a daunting task that you'll feel is impossible to understand; with its: 
 rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
 However there are a few sites that can alleivate most of the stress and confusion.  </h2>
