--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
     margin: auto;
     text-align: center;
     width: 60%;
-    padding: 0px
+    padding: 0px;
     color: #FFF3E7;
   }
 </style>
