--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>  
 <title>Crafting tips for FFXIV</title>
-<link rel = "sylesheet" href="Css.css">
+<link rel="website-project" href="https://github.com/Tokkisan/website-project/blob/main/Css.css">
 </head>
 
 <body>
