--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 </div>
   
 <!-- Job icons -->
-<div class = center>
+<div class = center1>
   <div class = "row">
     <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
