--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
     <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/><br>
   </div>
 </div>
-<pre class = "intext"> Intro: 
+<pre class = "intext"> <br>Intro: 
 </pre>
 <h2 class = intro> Crafting in Final Fantasy XVI may seem like a daunting task that you'll feel is impossible to understand; with its: 
 rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
