--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
   
 <!-- Job icons -->
 <div class = center1>
-  <div class = "row">
+ <div class = "row" style = "display:inline-block;">
     <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/VkHG6R6f/Blacksmith.png"/>
@@ -46,14 +46,19 @@
     <img class = "jobicons" src = "https://i.postimg.cc/yNMLh8c2/Culinarian.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/><br>
+    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
   </div>
-</div>
-<pre class = "intext"> <br>Intro: 
+  </div>
+<br>
+<br>
+<div id = "int1">
+<pre class = "intext"><br>Intro: 
 </pre>
+<br/>
 <h2 class = intro> Crafting in Final Fantasy XVI may seem like a daunting task that you'll feel is impossible to understand; with its: 
 rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
-However there are a few sites that can alleivate most of the stress and confusion.  </h2>
+However there are a few sites that can alleivate most of the stress and confusion.</h2>
+</div>
 </body>
 
 </html>
