--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>  
 <title>Crafting tips for FFXIV</title>
 <link rel="stylesheet" type="text/css" href="Css.css">
+
 </head>
 
 <body>
@@ -37,8 +38,9 @@
 </div>
   
 <!-- Job icons -->
-<div class = center1>
- <div class = "row" style = "display:inline-block;">
+<div class = "row">
+    <div class = "column">
+<!-- keep this it works for some reason -->
     <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/VkHG6R6f/Blacksmith.png"/>
@@ -47,8 +49,9 @@
     <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
     <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
-  </div>
-  </div>
+</div>
+</div>
+  
 <br>
 <br>
 <div id = "int1">
@@ -59,6 +62,115 @@
 rotations, macros, craftminship/control/cp stats, and penta melding. It also doesn't help that there are 8 different crafters, and that you can specialize in 3 of them.
 However there are a few sites that can alleivate most of the stress and confusion.</h2>
 </div>
+
+<!-- ffxivcrafting -->
+
+<div class = center>
+  <p>
+<br><br><br>
+    <a class = fflink href="https://ffxivcrafting.com/">FFXIVCRAFTING</a>
+<br><br>
+  </p>
+  <div style = "display:inline-block;vertical-align:top;">
+    <img class = ffxivcrafting src ='https://i.postimg.cc/nrYZgr1j/ffxivcrafting.png'/>
+
+    <h3 style = "display:inline-block;"> FFXIVCRAFTING is one of the best way to manage your recipes. The website allows you
+     to input multiple recipes and the amount wanted, then it shows you the total amount of ingredients needed with a hyper link to garland data..
+
+<br><br>
+     It comes in a checklist format to mark off materials that have been gathered, or calculate how much more is needed.
+<br><br>
+     The site also tracks levequests (which is a great way to level up quickly if you have a lot of gil) and which equipment is the best at the given level.
+
+     </h3>
+  </div>
+</div>
+
+<!-- Garland Data -->
+
+<div class = center>
+
+ <p>
+ <br><br><br>
+     <a class = fflink href="https://garlandtools.org/db/">GARLAND DATA</a>
+ <br><br>
+ </p>
+
+ <div style = "display:inline-block;vertical-align:top;">
+    <img class = garland src = "https://i.postimg.cc/8ccssVwc/garland.png"/>
+
+    <h3 style = "display:inline-block;"> Garland Data is a massive database filled with information on every item, quest, npc, etc...
+
+    <br><br>
+
+    When clicking on the ingredients needed on ffxivcrafting it will send the user to Garland Data. Then the user can see the different ways to
+    gather a certain ingredient, be it buying it off the marketboard, GC seals, NPCS, etc...
+
+    <br><br>
+    If the ingredient is time gated, Garland Data will display when the item is avaliable; theres also a setting to setup an alarm noise when the ingredient
+    becomes available to gather.
+    </h3>
+  </div>
+</div>
+
+
+<!-- Universalis Market -->
+
+<div class = center>
+<p>
+<br><br><br>
+	<a class = fflink href="https://universalis.app/"> UNIVERSALIS</a>
+<br><br>
+</p>
+
+ <div style = "display:inline-block;vertical-align:top;">
+    <img class = univ src = "https://i.postimg.cc/6ppRgVzK/univeralis.png"/>
+
+    <h3 style = "display:inline-block;"> "Universalis is a market board data site with crowd sourced information, based on mogboard."
+    <br>
+    -Univeralis website
+    <br><br>
+    
+    FFXIV allows a player to travel to a different server within their data center and users can buy off of that server's marketboard. Each server
+    has different prices that people place on items so it may be cheaper to travel to other servers to buy crafting materials. 
+    <br><br>
+    Thats where Univeralis comes in, it tracks each server's marketboard by using crowd sourced information. It may not always be accurate but it gives
+    a good reference of how expensive an item may be on that specific server.
+
+    </h3>
+  </div>
+</div>
+
+
+<!-- Teamcraft -->
+<div class = center>
+<p>
+<br><br><br>
+	<a class = fflink href = "https://ffxivteamcraft.com/search">TEAMCRAFT</a>
+<br><br>
+</p>
+  <div style = "display:inline-block;vertical-align:top;">
+     <img class = tc src = "https://i.postimg.cc/gj9GKrZ6/teamcraft.png"/>
+  
+     <h3 style = "display:inline-block;"> FFXIV TeamCraft is one of the best sites for crafters. It also has similar settings as FFXIV crafting with its list and alarms for
+     for time gated nodes.
+     <br><br>
+     However its main focus is its crafting simulator and gear sharing ability. Many veterans post their penta meld gear so that others can copy their build.
+     <br><br>
+     (Penta melded gear is only people who are really into crafting as the stats gain is for master recipes and above)
+
+     </h3>
+  </div>
+</div>
+
+
+<!-- made by -->
+
+<div class = center>
+<br><br><br><br><br><br>
+<h4> Made by Aaron Lee for CPSC 311-01 </h4>
+</div>
+
 </body>
 
 </html>
