--- a/main.html
+++ b/main.html
@@ -41,14 +41,14 @@
 <div class = "row">
     <div class = "column">
 <!-- keep this it works for some reason -->
-    <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/VkHG6R6f/Blacksmith.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/3w4LDv4g/Carpenter.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/yNMLh8c2/Culinarian.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png"/>
-    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png"/>
+    <img class = "jobicons" src = "https://i.postimg.cc/TY0H8GvW/Alchemist.png" alt = 'Alchemist'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/MpG3q4z3/Armorer.png" alt = 'Armorer'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/VkHG6R6f/Blacksmith.png" alt = 'Blacksmith'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/3w4LDv4g/Carpenter.png" alt = 'Carpenter'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/yNMLh8c2/Culinarian.png" alt = 'Culinarian'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/wvD0wYkM/Goldsmith.png" alt = 'Goldsmith'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/GtrzNgMQ/Leatherworker.png" alt = 'Leatherworker'/>
+    <img class = "jobicons" src = "https://i.postimg.cc/x8RgSGhS/Weaver.png" alt = 'Weaver'/>
 </div>
 </div>
   
@@ -72,7 +72,7 @@ However there are a few sites that can alleivate most of the stress and confusio
 <br><br>
   </p>
   <div style = "display:inline-block;vertical-align:top;">
-    <img class = ffxivcrafting src ='https://i.postimg.cc/nrYZgr1j/ffxivcrafting.png'/>
+    <img class = ffxivcrafting src ='https://i.postimg.cc/nrYZgr1j/ffxivcrafting.png' alt = 'ffxiv crafting screenshot'/>
 
     <h3 style = "display:inline-block;"> FFXIVCRAFTING is one of the best way to manage your recipes. The website allows you
      to input multiple recipes and the amount wanted, then it shows you the total amount of ingredients needed with a hyper link to garland data..
@@ -97,7 +97,7 @@ However there are a few sites that can alleivate most of the stress and confusio
  </p>
 
  <div style = "display:inline-block;vertical-align:top;">
-    <img class = garland src = "https://i.postimg.cc/8ccssVwc/garland.png"/>
+    <img class = garland src = "https://i.postimg.cc/8ccssVwc/garland.png" alt = 'Garland data screenshot'/>
 
     <h3 style = "display:inline-block;"> Garland Data is a massive database filled with information on every item, quest, npc, etc...
 
@@ -124,7 +124,7 @@ However there are a few sites that can alleivate most of the stress and confusio
 </p>
 
  <div style = "display:inline-block;vertical-align:top;">
-    <img class = univ src = "https://i.postimg.cc/6ppRgVzK/univeralis.png"/>
+    <img class = univ src = "https://i.postimg.cc/6ppRgVzK/univeralis.png" alt = 'Univeralis screenshot'/>
 
     <h3 style = "display:inline-block;"> "Universalis is a market board data site with crowd sourced information, based on mogboard."
     <br>
@@ -150,7 +150,7 @@ However there are a few sites that can alleivate most of the stress and confusio
 <br><br>
 </p>
   <div style = "display:inline-block;vertical-align:top;">
-     <img class = tc src = "https://i.postimg.cc/gj9GKrZ6/teamcraft.png"/>
+     <img class = tc src = "https://i.postimg.cc/gj9GKrZ6/teamcraft.png" alt = 'teamcraft screenshot'/>
   
      <h3 style = "display:inline-block;"> FFXIV TeamCraft is one of the best sites for crafters. It also has similar settings as FFXIV crafting with its list and alarms for
      for time gated nodes.
