--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>  
 <title>Crafting tips for FFXIV</title>
 <link rel="stylesheet" type="text/css" href="Css.css">
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div>
 <style>
   .center {
     margin: auto;
@@ -28,11 +29,11 @@
     color: #FFF3E7;
   }
 </style>
-
+</div>
 <!-- Title with icon-->
 <div class = center>
   <div style = "display:inline-block;vertical-align:top;">
-    <img src ='https://i.postimg.cc/pLDrV0k8/great-strides.png' border='0' alt='great-strides'/>
+    <img src ='https://i.postimg.cc/pLDrV0k8/great-strides.png' alt='great-strides'/>
     <h1 style = "display:inline-block;"> Crafting Tips for FFXIV </h1>
   </div>
 </div>
